update_routes
