# src/routes/newsRoute.js
@@ -7,16 +7,16 @@ const newsRoute = Router();
 
 newsRoute.get("/", newsController.findAllController);
 newsRoute.get("/last", newsController.findLastController);
-newsRoute.get("/title", newsController.searchByTitleController);
+newsRoute.get("/search", newsController.searchByTitleController);
 
 newsRoute.use(authMiddleware);
 newsRoute.post("/", newsController.createController);
 
 newsRoute.use(validId);
 newsRoute.get("/searchByUser", newsController.searchByUserController);
-newsRoute.get("/:id", newsController.findByIdController);
-newsRoute.patch("/:id", newsController.updateController);
-newsRoute.delete("/:id", newsController.eraseController);
+newsRoute.get("findById/:id", newsController.findByIdController);
+newsRoute.patch("update/:id", newsController.updateController);
+newsRoute.delete("delete/:id", newsController.eraseController);
 newsRoute.patch("/like/:id", newsController.likeController);
 newsRoute.patch("/comment/:id", newsController.addCommentController);
 newsRoute.patch(
