# src/routes/userRoute.js
@@ -11,7 +11,7 @@ userRoute.use(authMiddleware);
 userRoute.get("/", userController.findAllController);
 
 userRoute.use(validId);
-userRoute.get("/:id", userController.findByIdController);
-userRoute.patch("/:id", userController.updateController);
+userRoute.get("findById/:id", userController.findByIdController);
+userRoute.patch("update/:id", userController.updateController);
 
 export default userRoute;
